m2ee-tools UNRELEASED
  * 'pretty' print statistics output

m2ee-tools 0.3.6.1, 19 Mar 2012
  * m2ee-tools is python 2.4 compatible again (remove a conditional expression)
  * Add missing autosubscribe option in file logging example config
  * Use sys.exit() instead of exit()

m2ee-tools 0.3.6, 9 Feb 2012
  * Fix crash when message field in critical logmessage is not present

m2ee-tools 0.3.5, 2 Jan 2012
  * Fix: Remove leftover test code causing 'Caused by: bla'
  * Fix: if running the Mendix Runtime from source using eclipse, dont try
    to find where m2ee/runtime jars live
  * Fix: also put model lib into classpath when running Mendix from source

m2ee-tools 0.3.4, 17 Oct 2011
  * Fix MicroFlowConstants -> MicroflowConstants typo, which causes mf
    constants not to be recognized if put in custom section in m2ee.yaml
	Thanks to Jonathan van Alteren <jvalteren@flowfabric.com>

m2ee-tools 0.3.3, 7 Sep 2011

  * Fix nagios output: don't put status information in performance data
    section
  * Now compatible with 2.5.0 < Mendix <= 3.0.0-rc1
  * Fix missing send_mime_types functionality (mime types were being ignored
    until now)
  * Stop application startup when sending configuration causes error messages
  * Add munin-config-cache, so munin_config will output last-known configuration,
    while munin_values won't output values.
    This prevents graphs from disappearing when an application is not running.
  * Improve feedback when "pid alive, m2ee does not respond": more verbose
    explanation; tell user to consider restarting the application process.

m2ee-tools 0.3.2, unreleased

  * Fix string formatting issues
  * get_logged_in_user_names is now who or w

m2ee-tools 0.3.1, 7 Jun 2011

  * Fix string formatting error in restoredb error output
  * instead of all to stderr, log everything below ERROR to to stdout,
    log everything that's ERROR and more serious to stderr

m2ee-tools 0.3.0, 30 May 2011

  * Add help text explaining available commands