@@ -1,5 +1,7 @@
 m2ee-tools UNRELEASED
   * 'pretty' print statistics output
+  * Add show_current_runtime_requests and interrupt_request to show and
+    terminate running requests. (>= 2.5.8, 3.1.0)
 
 m2ee-tools 0.3.6.1, 19 Mar 2012
   * m2ee-tools is python 2.4 compatible again (remove a conditional expression)
